# spatial-etl-framework

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Readme.md  banner.py  config.yaml  config_test.yaml  default.style  mapconfig.xml  pyproject.toml  requirements.txt  run.py  test.config.yaml
.claude/: CLAUDE.md
NotUsed/: db_conf.py  db_connect.py  db_inst.py  db_repo.py  scheduler.py
communication/: comm_repository.py  comm_service.py
config_features/: __init__.py  base.py  registry.py
core/: application.py  base_graph.py  command_runner.py  custom_graph_loader.py  debug_mapper_service.py  globalconstants.py  init_graph.py  init_scheduler.py  init_server.py  main.py  static_constants.py
custom_graph_base_tables/: __init__.py  barrierNodes.py  linksTable.py  waysBaseChangesConsumedTable.py  waysBaseChangesStateTable.py  waysBaseChangesTable.py  waysBaseTable.py
data_config_dtos/: data_source_config_dto.py
data_mappers/: __init__.py  airQualityDataMapper.py  airQualityMapper.py  elevationGridMapper.py  elevationMapper.py  elevationNumpyDeprecatedMapper.py  elevationPointDeprecatedMapper.py  elevationPythonMapper.py  fountainMapper.py  graphMapper.py  pleasantBicyclingMapper.py  testMapper.py  treeMapper.py  treeWfsCapabilitiesMapper.py  weatherMapper.py  weatherStationMapper.py
data_source_configs/: air_quality_data_download.yaml  draft+v1.yaml  elevation.yaml  elevation_grids_links.yaml  fountain.yaml  incorrect_yaml_format.yaml  osm_pbf.yaml  pleasant_bicycling.yaml  source1-yam.yaml  (+4 more)
(+149 files in other folders)
